typescript/checker/tests/errors/types/interface/same-file/index.ts.stderr
error: AssignFailed {
    left: Interface(
        Interface {
            span: Span {
                lo: BytePos(
                    10,
                ),
                hi: BytePos(
                    33,
                ),
                ctxt: #0,
            },
            type_params: None,
            extends: [],
            body: [
                Property(
                    PropertySignature {
                        span: Span {
                            lo: BytePos(
                                18,
                            ),
                            hi: BytePos(
                                31,
                            ),
                            ctxt: #0,
                        },
                        readonly: false,
                        key: Ident(
                            Ident {
                                span: Span {
                                    lo: BytePos(
                                        18,
                                    ),
                                    hi: BytePos(
                                        22,
                                    ),
                                    ctxt: #0,
                                },
                                sym: Atom('name' type=inline),
                                type_ann: None,
                                optional: false,
                            },
                        ),
                        computed: false,
                        optional: false,
                        init: None,
                        params: [],
                        type_ann: Some(
                            Keyword(
                                TsKeywordType {
                                    span: Span {
                                        lo: BytePos(
                                            24,
                                        ),
                                        hi: BytePos(
                                            30,
                                        ),
                                        ctxt: #0,
                                    },
                                    kind: TsStringKeyword,
                                },
                            ),
                        ),
                        type_params: None,
                    },
                ),
            ],
        },
    ),
    right: TypeLit(
        TypeLit {
            span: Span {
                lo: BytePos(
                    48,
                ),
                hi: BytePos(
                    50,
                ),
                ctxt: #0,
            },
            members: [],
        },
    ),
    cause: [
        MissingFields {
            span: Span {
                lo: BytePos(
                    10,
                ),
                hi: BytePos(
                    33,
                ),
                ctxt: #0,
            },
            fields: [
                Property(
                    PropertySignature {
                        span: Span {
                            lo: BytePos(
                                18,
                            ),
                            hi: BytePos(
                                31,
                            ),
                            ctxt: #0,
                        },
                        readonly: false,
                        key: Ident(
                            Ident {
                                span: Span {
                                    lo: BytePos(
                                        18,
                                    ),
                                    hi: BytePos(
                                        22,
                                    ),
                                    ctxt: #0,
                                },
                                sym: Atom('name' type=inline),
                                type_ann: None,
                                optional: false,
                            },
                        ),
                        computed: false,
                        optional: false,
                        init: None,
                        params: [],
                        type_ann: Some(
                            Keyword(
                                TsKeywordType {
                                    span: Span {
                                        lo: BytePos(
                                            24,
                                        ),
                                        hi: BytePos(
                                            30,
                                        ),
                                        ctxt: #0,
                                    },
                                    kind: TsStringKeyword,
                                },
                            ),
                        ),
                        type_params: None,
                    },
                ),
            ],
        },
    ],
}
 --> $DIR/tests/errors/types/interface/same-file/index.ts:1:11
  |
1 |   interface Foo {
  |  ___________^
2 | |   name: string;
3 | | }
4 | |
5 | | let a: Foo = {};
  | |_______________^

